// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input Addon> should render group button before input addon correctly 1`] = `
<FormRenderer
  clearOnUnmount={false}
  componentMapper={
    Object {
      "button": [Function],
      "checkbox": [Function],
      "date-picker": [Function],
      "input-addon-button-group": [Function],
      "input-addon-group": [Function],
      "plain-text": [Function],
      "radio": [Function],
      "select": [Function],
      "sub-form": [Function],
      "switch": [Function],
      "tabs": [Function],
      "text-field": [Function],
      "textarea": [Function],
      "time-picker": [Function],
      "wizard": [Function],
    }
  }
  initialValues={Object {}}
  onCancel={[Function]}
  onSubmit={[MockFunction]}
  schema={
    Object {
      "fields": Array [
        Object {
          "component": "text-field",
          "inputAddon": Object {
            "before": Object {
              "fields": Array [
                Object {
                  "component": "input-addon-button-group",
                  "fields": Array [
                    Object {
                      "component": "button",
                      "label": "Set 1",
                      "name": "set1",
                      "onClick": [Function],
                    },
                    Object {
                      "component": "button",
                      "label": "Set 2",
                      "name": "set2",
                    },
                  ],
                  "name": "i-a-g-2",
                },
              ],
            },
          },
          "label": "Text Box With Input Addon",
          "name": "text_box_21",
          "title": "Text Box With Input Addon",
        },
      ],
    }
  }
  showFormControls={false}
>
  <ReactFinalForm
    decorators={
      Array [
        [Function],
      ]
    }
    initialValues={Object {}}
    mutators={
      Object {
        "concat": [Function],
        "insert": [Function],
        "move": [Function],
        "pop": [Function],
        "push": [Function],
        "remove": [Function],
        "removeBatch": [Function],
        "shift": [Function],
        "swap": [Function],
        "unshift": [Function],
        "update": [Function],
      }
    }
    onSubmit={[MockFunction]}
    render={[Function]}
    subscription={
      Object {
        "pristine": true,
        "submitting": true,
        "valid": true,
      }
    }
  >
    <FormContent
      Template={[Function]}
      formFields={
        Array [
          <SingleField
            component="text-field"
            inputAddon={
              Object {
                "before": Object {
                  "fields": Array [
                    Object {
                      "component": "input-addon-button-group",
                      "fields": Array [
                        Object {
                          "component": "button",
                          "label": "Set 1",
                          "name": "set1",
                          "onClick": [Function],
                        },
                        Object {
                          "component": "button",
                          "label": "Set 2",
                          "name": "set2",
                        },
                      ],
                      "name": "i-a-g-2",
                    },
                  ],
                },
              }
            }
            label="Text Box With Input Addon"
            name="text_box_21"
            title="Text Box With Input Addon"
          />,
        ]
      }
      schema={
        Object {
          "fields": Array [
            Object {
              "component": "text-field",
              "inputAddon": Object {
                "before": Object {
                  "fields": Array [
                    Object {
                      "component": "input-addon-button-group",
                      "fields": Array [
                        Object {
                          "component": "button",
                          "label": "Set 1",
                          "name": "set1",
                          "onClick": [Function],
                        },
                        Object {
                          "component": "button",
                          "label": "Set 2",
                          "name": "set2",
                        },
                      ],
                      "name": "i-a-g-2",
                    },
                  ],
                },
              },
              "label": "Text Box With Input Addon",
              "name": "text_box_21",
              "title": "Text Box With Input Addon",
            },
          ],
        }
      }
      value={
        Object {
          "actionMapper": undefined,
          "componentMapper": Object {
            "button": [Function],
            "checkbox": [Function],
            "date-picker": [Function],
            "input-addon-button-group": [Function],
            "input-addon-group": [Function],
            "plain-text": [Function],
            "radio": [Function],
            "select": [Function],
            "sub-form": [Function],
            "switch": [Function],
            "tabs": [Function],
            "text-field": [Function],
            "textarea": [Function],
            "time-picker": [Function],
            "wizard": [Function],
          },
          "formOptions": Object {
            "batch": [Function],
            "blur": [Function],
            "change": [Function],
            "clearOnUnmount": false,
            "clearedValue": undefined,
            "concat": [Function],
            "destroyOnUnregister": false,
            "focus": [Function],
            "getFieldState": [Function],
            "getRegisteredFields": [Function],
            "getState": [Function],
            "handleSubmit": [Function],
            "initialize": [Function],
            "insert": [Function],
            "isValidationPaused": [Function],
            "move": [Function],
            "onCancel": [Function],
            "onReset": undefined,
            "onSubmit": [MockFunction],
            "pauseValidation": [Function],
            "pop": [Function],
            "pristine": true,
            "push": [Function],
            "registerField": [Function],
            "remove": [Function],
            "removeBatch": [Function],
            "renderForm": [Function],
            "reset": [Function],
            "resetFieldState": [Function],
            "resumeValidation": [Function],
            "setConfig": [Function],
            "shift": [Function],
            "submit": [Function],
            "subscribe": [Function],
            "swap": [Function],
            "unshift": [Function],
            "update": [Function],
            "valid": true,
          },
          "validatorMapper": Object {
            "exact-length-validator": [Function],
            "max-length-validator": [Function],
            "max-number-value": [Function],
            "min-items-validator": [Function],
            "min-length-validator": [Function],
            "min-number-value": [Function],
            "pattern-validator": [Function],
            "required-validator": [Function],
            "url-validator": [Function],
          },
        }
      }
    >
      <Component
        formFields={
          Array [
            <SingleField
              component="text-field"
              inputAddon={
                Object {
                  "before": Object {
                    "fields": Array [
                      Object {
                        "component": "input-addon-button-group",
                        "fields": Array [
                          Object {
                            "component": "button",
                            "label": "Set 1",
                            "name": "set1",
                            "onClick": [Function],
                          },
                          Object {
                            "component": "button",
                            "label": "Set 2",
                            "name": "set2",
                          },
                        ],
                        "name": "i-a-g-2",
                      },
                    ],
                  },
                }
              }
              label="Text Box With Input Addon"
              name="text_box_21"
              title="Text Box With Input Addon"
            />,
          ]
        }
        schema={
          Object {
            "fields": Array [
              Object {
                "component": "text-field",
                "inputAddon": Object {
                  "before": Object {
                    "fields": Array [
                      Object {
                        "component": "input-addon-button-group",
                        "fields": Array [
                          Object {
                            "component": "button",
                            "label": "Set 1",
                            "name": "set1",
                            "onClick": [Function],
                          },
                          Object {
                            "component": "button",
                            "label": "Set 2",
                            "name": "set2",
                          },
                        ],
                        "name": "i-a-g-2",
                      },
                    ],
                  },
                },
                "label": "Text Box With Input Addon",
                "name": "text_box_21",
                "title": "Text Box With Input Addon",
              },
            ],
          }
        }
      >
        <div>
          FormRenderer is missing 'FormTemplate' prop: ({formFields, schema}) =&gt; &lt;FormTemplate {...} /&gt;
        </div>
      </Component>
    </FormContent>
  </ReactFinalForm>
</FormRenderer>
`;

exports[`<Input Addon> should render group mixed before input addon correctly 1`] = `
<FormRenderer
  clearOnUnmount={false}
  componentMapper={
    Object {
      "button": [Function],
      "checkbox": [Function],
      "date-picker": [Function],
      "input-addon-button-group": [Function],
      "input-addon-group": [Function],
      "plain-text": [Function],
      "radio": [Function],
      "select": [Function],
      "sub-form": [Function],
      "switch": [Function],
      "tabs": [Function],
      "text-field": [Function],
      "textarea": [Function],
      "time-picker": [Function],
      "wizard": [Function],
    }
  }
  initialValues={Object {}}
  onCancel={[Function]}
  onSubmit={[MockFunction]}
  schema={
    Object {
      "fields": Array [
        Object {
          "component": "text-field",
          "inputAddon": Object {
            "before": Object {
              "fields": Array [
                Object {
                  "component": "input-addon-group",
                  "fields": Array [
                    Object {
                      "component": "plain-text",
                      "label": "-",
                      "name": "name1",
                      "variant": "span",
                    },
                  ],
                  "name": "i-a-g-2",
                },
                Object {
                  "component": "input-addon-button-group",
                  "fields": Array [
                    Object {
                      "component": "button",
                      "label": "Set 3",
                      "name": "set3",
                    },
                  ],
                  "name": "i-a-g-3",
                },
              ],
            },
          },
          "label": "Text Box With Input Addon",
          "name": "text_box_21",
          "title": "Text Box With Input Addon",
        },
      ],
    }
  }
  showFormControls={false}
>
  <ReactFinalForm
    decorators={
      Array [
        [Function],
      ]
    }
    initialValues={Object {}}
    mutators={
      Object {
        "concat": [Function],
        "insert": [Function],
        "move": [Function],
        "pop": [Function],
        "push": [Function],
        "remove": [Function],
        "removeBatch": [Function],
        "shift": [Function],
        "swap": [Function],
        "unshift": [Function],
        "update": [Function],
      }
    }
    onSubmit={[MockFunction]}
    render={[Function]}
    subscription={
      Object {
        "pristine": true,
        "submitting": true,
        "valid": true,
      }
    }
  >
    <FormContent
      Template={[Function]}
      formFields={
        Array [
          <SingleField
            component="text-field"
            inputAddon={
              Object {
                "before": Object {
                  "fields": Array [
                    Object {
                      "component": "input-addon-group",
                      "fields": Array [
                        Object {
                          "component": "plain-text",
                          "label": "-",
                          "name": "name1",
                          "variant": "span",
                        },
                      ],
                      "name": "i-a-g-2",
                    },
                    Object {
                      "component": "input-addon-button-group",
                      "fields": Array [
                        Object {
                          "component": "button",
                          "label": "Set 3",
                          "name": "set3",
                        },
                      ],
                      "name": "i-a-g-3",
                    },
                  ],
                },
              }
            }
            label="Text Box With Input Addon"
            name="text_box_21"
            title="Text Box With Input Addon"
          />,
        ]
      }
      schema={
        Object {
          "fields": Array [
            Object {
              "component": "text-field",
              "inputAddon": Object {
                "before": Object {
                  "fields": Array [
                    Object {
                      "component": "input-addon-group",
                      "fields": Array [
                        Object {
                          "component": "plain-text",
                          "label": "-",
                          "name": "name1",
                          "variant": "span",
                        },
                      ],
                      "name": "i-a-g-2",
                    },
                    Object {
                      "component": "input-addon-button-group",
                      "fields": Array [
                        Object {
                          "component": "button",
                          "label": "Set 3",
                          "name": "set3",
                        },
                      ],
                      "name": "i-a-g-3",
                    },
                  ],
                },
              },
              "label": "Text Box With Input Addon",
              "name": "text_box_21",
              "title": "Text Box With Input Addon",
            },
          ],
        }
      }
      value={
        Object {
          "actionMapper": undefined,
          "componentMapper": Object {
            "button": [Function],
            "checkbox": [Function],
            "date-picker": [Function],
            "input-addon-button-group": [Function],
            "input-addon-group": [Function],
            "plain-text": [Function],
            "radio": [Function],
            "select": [Function],
            "sub-form": [Function],
            "switch": [Function],
            "tabs": [Function],
            "text-field": [Function],
            "textarea": [Function],
            "time-picker": [Function],
            "wizard": [Function],
          },
          "formOptions": Object {
            "batch": [Function],
            "blur": [Function],
            "change": [Function],
            "clearOnUnmount": false,
            "clearedValue": undefined,
            "concat": [Function],
            "destroyOnUnregister": false,
            "focus": [Function],
            "getFieldState": [Function],
            "getRegisteredFields": [Function],
            "getState": [Function],
            "handleSubmit": [Function],
            "initialize": [Function],
            "insert": [Function],
            "isValidationPaused": [Function],
            "move": [Function],
            "onCancel": [Function],
            "onReset": undefined,
            "onSubmit": [MockFunction],
            "pauseValidation": [Function],
            "pop": [Function],
            "pristine": true,
            "push": [Function],
            "registerField": [Function],
            "remove": [Function],
            "removeBatch": [Function],
            "renderForm": [Function],
            "reset": [Function],
            "resetFieldState": [Function],
            "resumeValidation": [Function],
            "setConfig": [Function],
            "shift": [Function],
            "submit": [Function],
            "subscribe": [Function],
            "swap": [Function],
            "unshift": [Function],
            "update": [Function],
            "valid": true,
          },
          "validatorMapper": Object {
            "exact-length-validator": [Function],
            "max-length-validator": [Function],
            "max-number-value": [Function],
            "min-items-validator": [Function],
            "min-length-validator": [Function],
            "min-number-value": [Function],
            "pattern-validator": [Function],
            "required-validator": [Function],
            "url-validator": [Function],
          },
        }
      }
    >
      <Component
        formFields={
          Array [
            <SingleField
              component="text-field"
              inputAddon={
                Object {
                  "before": Object {
                    "fields": Array [
                      Object {
                        "component": "input-addon-group",
                        "fields": Array [
                          Object {
                            "component": "plain-text",
                            "label": "-",
                            "name": "name1",
                            "variant": "span",
                          },
                        ],
                        "name": "i-a-g-2",
                      },
                      Object {
                        "component": "input-addon-button-group",
                        "fields": Array [
                          Object {
                            "component": "button",
                            "label": "Set 3",
                            "name": "set3",
                          },
                        ],
                        "name": "i-a-g-3",
                      },
                    ],
                  },
                }
              }
              label="Text Box With Input Addon"
              name="text_box_21"
              title="Text Box With Input Addon"
            />,
          ]
        }
        schema={
          Object {
            "fields": Array [
              Object {
                "component": "text-field",
                "inputAddon": Object {
                  "before": Object {
                    "fields": Array [
                      Object {
                        "component": "input-addon-group",
                        "fields": Array [
                          Object {
                            "component": "plain-text",
                            "label": "-",
                            "name": "name1",
                            "variant": "span",
                          },
                        ],
                        "name": "i-a-g-2",
                      },
                      Object {
                        "component": "input-addon-button-group",
                        "fields": Array [
                          Object {
                            "component": "button",
                            "label": "Set 3",
                            "name": "set3",
                          },
                        ],
                        "name": "i-a-g-3",
                      },
                    ],
                  },
                },
                "label": "Text Box With Input Addon",
                "name": "text_box_21",
                "title": "Text Box With Input Addon",
              },
            ],
          }
        }
      >
        <div>
          FormRenderer is missing 'FormTemplate' prop: ({formFields, schema}) =&gt; &lt;FormTemplate {...} /&gt;
        </div>
      </Component>
    </FormContent>
  </ReactFinalForm>
</FormRenderer>
`;

exports[`<Input Addon> should render single after input addon correctly 1`] = `
<FormRenderer
  clearOnUnmount={false}
  componentMapper={
    Object {
      "button": [Function],
      "checkbox": [Function],
      "date-picker": [Function],
      "input-addon-button-group": [Function],
      "input-addon-group": [Function],
      "plain-text": [Function],
      "radio": [Function],
      "select": [Function],
      "sub-form": [Function],
      "switch": [Function],
      "tabs": [Function],
      "text-field": [Function],
      "textarea": [Function],
      "time-picker": [Function],
      "wizard": [Function],
    }
  }
  initialValues={Object {}}
  onCancel={[Function]}
  onSubmit={[MockFunction]}
  schema={
    Object {
      "fields": Array [
        Object {
          "component": "text-field",
          "inputAddon": Object {
            "after": Object {
              "fields": Array [
                Object {
                  "component": "plain-text",
                  "label": "-",
                  "name": "name1",
                  "variant": "span",
                },
              ],
            },
          },
          "label": "Text Box With Input Addon",
          "name": "text_box_21",
          "title": "Text Box With Input Addon",
        },
      ],
    }
  }
  showFormControls={false}
>
  <ReactFinalForm
    decorators={
      Array [
        [Function],
      ]
    }
    initialValues={Object {}}
    mutators={
      Object {
        "concat": [Function],
        "insert": [Function],
        "move": [Function],
        "pop": [Function],
        "push": [Function],
        "remove": [Function],
        "removeBatch": [Function],
        "shift": [Function],
        "swap": [Function],
        "unshift": [Function],
        "update": [Function],
      }
    }
    onSubmit={[MockFunction]}
    render={[Function]}
    subscription={
      Object {
        "pristine": true,
        "submitting": true,
        "valid": true,
      }
    }
  >
    <FormContent
      Template={[Function]}
      formFields={
        Array [
          <SingleField
            component="text-field"
            inputAddon={
              Object {
                "after": Object {
                  "fields": Array [
                    Object {
                      "component": "plain-text",
                      "label": "-",
                      "name": "name1",
                      "variant": "span",
                    },
                  ],
                },
              }
            }
            label="Text Box With Input Addon"
            name="text_box_21"
            title="Text Box With Input Addon"
          />,
        ]
      }
      schema={
        Object {
          "fields": Array [
            Object {
              "component": "text-field",
              "inputAddon": Object {
                "after": Object {
                  "fields": Array [
                    Object {
                      "component": "plain-text",
                      "label": "-",
                      "name": "name1",
                      "variant": "span",
                    },
                  ],
                },
              },
              "label": "Text Box With Input Addon",
              "name": "text_box_21",
              "title": "Text Box With Input Addon",
            },
          ],
        }
      }
      value={
        Object {
          "actionMapper": undefined,
          "componentMapper": Object {
            "button": [Function],
            "checkbox": [Function],
            "date-picker": [Function],
            "input-addon-button-group": [Function],
            "input-addon-group": [Function],
            "plain-text": [Function],
            "radio": [Function],
            "select": [Function],
            "sub-form": [Function],
            "switch": [Function],
            "tabs": [Function],
            "text-field": [Function],
            "textarea": [Function],
            "time-picker": [Function],
            "wizard": [Function],
          },
          "formOptions": Object {
            "batch": [Function],
            "blur": [Function],
            "change": [Function],
            "clearOnUnmount": false,
            "clearedValue": undefined,
            "concat": [Function],
            "destroyOnUnregister": false,
            "focus": [Function],
            "getFieldState": [Function],
            "getRegisteredFields": [Function],
            "getState": [Function],
            "handleSubmit": [Function],
            "initialize": [Function],
            "insert": [Function],
            "isValidationPaused": [Function],
            "move": [Function],
            "onCancel": [Function],
            "onReset": undefined,
            "onSubmit": [MockFunction],
            "pauseValidation": [Function],
            "pop": [Function],
            "pristine": true,
            "push": [Function],
            "registerField": [Function],
            "remove": [Function],
            "removeBatch": [Function],
            "renderForm": [Function],
            "reset": [Function],
            "resetFieldState": [Function],
            "resumeValidation": [Function],
            "setConfig": [Function],
            "shift": [Function],
            "submit": [Function],
            "subscribe": [Function],
            "swap": [Function],
            "unshift": [Function],
            "update": [Function],
            "valid": true,
          },
          "validatorMapper": Object {
            "exact-length-validator": [Function],
            "max-length-validator": [Function],
            "max-number-value": [Function],
            "min-items-validator": [Function],
            "min-length-validator": [Function],
            "min-number-value": [Function],
            "pattern-validator": [Function],
            "required-validator": [Function],
            "url-validator": [Function],
          },
        }
      }
    >
      <Component
        formFields={
          Array [
            <SingleField
              component="text-field"
              inputAddon={
                Object {
                  "after": Object {
                    "fields": Array [
                      Object {
                        "component": "plain-text",
                        "label": "-",
                        "name": "name1",
                        "variant": "span",
                      },
                    ],
                  },
                }
              }
              label="Text Box With Input Addon"
              name="text_box_21"
              title="Text Box With Input Addon"
            />,
          ]
        }
        schema={
          Object {
            "fields": Array [
              Object {
                "component": "text-field",
                "inputAddon": Object {
                  "after": Object {
                    "fields": Array [
                      Object {
                        "component": "plain-text",
                        "label": "-",
                        "name": "name1",
                        "variant": "span",
                      },
                    ],
                  },
                },
                "label": "Text Box With Input Addon",
                "name": "text_box_21",
                "title": "Text Box With Input Addon",
              },
            ],
          }
        }
      >
        <div>
          FormRenderer is missing 'FormTemplate' prop: ({formFields, schema}) =&gt; &lt;FormTemplate {...} /&gt;
        </div>
      </Component>
    </FormContent>
  </ReactFinalForm>
</FormRenderer>
`;

exports[`<Input Addon> should render single before input addon correctly 1`] = `
<FormRenderer
  clearOnUnmount={false}
  componentMapper={
    Object {
      "button": [Function],
      "checkbox": [Function],
      "date-picker": [Function],
      "input-addon-button-group": [Function],
      "input-addon-group": [Function],
      "plain-text": [Function],
      "radio": [Function],
      "select": [Function],
      "sub-form": [Function],
      "switch": [Function],
      "tabs": [Function],
      "text-field": [Function],
      "textarea": [Function],
      "time-picker": [Function],
      "wizard": [Function],
    }
  }
  initialValues={Object {}}
  onCancel={[Function]}
  onSubmit={[MockFunction]}
  schema={
    Object {
      "fields": Array [
        Object {
          "component": "text-field",
          "inputAddon": Object {
            "before": Object {
              "fields": Array [
                Object {
                  "component": "plain-text",
                  "label": "-",
                  "name": "name1",
                  "variant": "span",
                },
              ],
            },
          },
          "label": "Text Box With Input Addon",
          "name": "text_box_21",
          "title": "Text Box With Input Addon",
        },
      ],
    }
  }
  showFormControls={false}
>
  <ReactFinalForm
    decorators={
      Array [
        [Function],
      ]
    }
    initialValues={Object {}}
    mutators={
      Object {
        "concat": [Function],
        "insert": [Function],
        "move": [Function],
        "pop": [Function],
        "push": [Function],
        "remove": [Function],
        "removeBatch": [Function],
        "shift": [Function],
        "swap": [Function],
        "unshift": [Function],
        "update": [Function],
      }
    }
    onSubmit={[MockFunction]}
    render={[Function]}
    subscription={
      Object {
        "pristine": true,
        "submitting": true,
        "valid": true,
      }
    }
  >
    <FormContent
      Template={[Function]}
      formFields={
        Array [
          <SingleField
            component="text-field"
            inputAddon={
              Object {
                "before": Object {
                  "fields": Array [
                    Object {
                      "component": "plain-text",
                      "label": "-",
                      "name": "name1",
                      "variant": "span",
                    },
                  ],
                },
              }
            }
            label="Text Box With Input Addon"
            name="text_box_21"
            title="Text Box With Input Addon"
          />,
        ]
      }
      schema={
        Object {
          "fields": Array [
            Object {
              "component": "text-field",
              "inputAddon": Object {
                "before": Object {
                  "fields": Array [
                    Object {
                      "component": "plain-text",
                      "label": "-",
                      "name": "name1",
                      "variant": "span",
                    },
                  ],
                },
              },
              "label": "Text Box With Input Addon",
              "name": "text_box_21",
              "title": "Text Box With Input Addon",
            },
          ],
        }
      }
      value={
        Object {
          "actionMapper": undefined,
          "componentMapper": Object {
            "button": [Function],
            "checkbox": [Function],
            "date-picker": [Function],
            "input-addon-button-group": [Function],
            "input-addon-group": [Function],
            "plain-text": [Function],
            "radio": [Function],
            "select": [Function],
            "sub-form": [Function],
            "switch": [Function],
            "tabs": [Function],
            "text-field": [Function],
            "textarea": [Function],
            "time-picker": [Function],
            "wizard": [Function],
          },
          "formOptions": Object {
            "batch": [Function],
            "blur": [Function],
            "change": [Function],
            "clearOnUnmount": false,
            "clearedValue": undefined,
            "concat": [Function],
            "destroyOnUnregister": false,
            "focus": [Function],
            "getFieldState": [Function],
            "getRegisteredFields": [Function],
            "getState": [Function],
            "handleSubmit": [Function],
            "initialize": [Function],
            "insert": [Function],
            "isValidationPaused": [Function],
            "move": [Function],
            "onCancel": [Function],
            "onReset": undefined,
            "onSubmit": [MockFunction],
            "pauseValidation": [Function],
            "pop": [Function],
            "pristine": true,
            "push": [Function],
            "registerField": [Function],
            "remove": [Function],
            "removeBatch": [Function],
            "renderForm": [Function],
            "reset": [Function],
            "resetFieldState": [Function],
            "resumeValidation": [Function],
            "setConfig": [Function],
            "shift": [Function],
            "submit": [Function],
            "subscribe": [Function],
            "swap": [Function],
            "unshift": [Function],
            "update": [Function],
            "valid": true,
          },
          "validatorMapper": Object {
            "exact-length-validator": [Function],
            "max-length-validator": [Function],
            "max-number-value": [Function],
            "min-items-validator": [Function],
            "min-length-validator": [Function],
            "min-number-value": [Function],
            "pattern-validator": [Function],
            "required-validator": [Function],
            "url-validator": [Function],
          },
        }
      }
    >
      <Component
        formFields={
          Array [
            <SingleField
              component="text-field"
              inputAddon={
                Object {
                  "before": Object {
                    "fields": Array [
                      Object {
                        "component": "plain-text",
                        "label": "-",
                        "name": "name1",
                        "variant": "span",
                      },
                    ],
                  },
                }
              }
              label="Text Box With Input Addon"
              name="text_box_21"
              title="Text Box With Input Addon"
            />,
          ]
        }
        schema={
          Object {
            "fields": Array [
              Object {
                "component": "text-field",
                "inputAddon": Object {
                  "before": Object {
                    "fields": Array [
                      Object {
                        "component": "plain-text",
                        "label": "-",
                        "name": "name1",
                        "variant": "span",
                      },
                    ],
                  },
                },
                "label": "Text Box With Input Addon",
                "name": "text_box_21",
                "title": "Text Box With Input Addon",
              },
            ],
          }
        }
      >
        <div>
          FormRenderer is missing 'FormTemplate' prop: ({formFields, schema}) =&gt; &lt;FormTemplate {...} /&gt;
        </div>
      </Component>
    </FormContent>
  </ReactFinalForm>
</FormRenderer>
`;

exports[`<Input Addon> should render single button after input addon correctly 1`] = `
<FormRenderer
  clearOnUnmount={false}
  componentMapper={
    Object {
      "button": [Function],
      "checkbox": [Function],
      "date-picker": [Function],
      "input-addon-button-group": [Function],
      "input-addon-group": [Function],
      "plain-text": [Function],
      "radio": [Function],
      "select": [Function],
      "sub-form": [Function],
      "switch": [Function],
      "tabs": [Function],
      "text-field": [Function],
      "textarea": [Function],
      "time-picker": [Function],
      "wizard": [Function],
    }
  }
  initialValues={Object {}}
  onCancel={[Function]}
  onSubmit={[MockFunction]}
  schema={
    Object {
      "fields": Array [
        Object {
          "component": "text-field",
          "inputAddon": Object {
            "after": Object {
              "fields": Array [
                Object {
                  "component": "button",
                  "label": "Set 3",
                  "name": "set3",
                },
              ],
            },
          },
          "label": "Text Box With Input Addon",
          "name": "text_box_21",
          "title": "Text Box With Input Addon",
        },
      ],
    }
  }
  showFormControls={false}
>
  <ReactFinalForm
    decorators={
      Array [
        [Function],
      ]
    }
    initialValues={Object {}}
    mutators={
      Object {
        "concat": [Function],
        "insert": [Function],
        "move": [Function],
        "pop": [Function],
        "push": [Function],
        "remove": [Function],
        "removeBatch": [Function],
        "shift": [Function],
        "swap": [Function],
        "unshift": [Function],
        "update": [Function],
      }
    }
    onSubmit={[MockFunction]}
    render={[Function]}
    subscription={
      Object {
        "pristine": true,
        "submitting": true,
        "valid": true,
      }
    }
  >
    <FormContent
      Template={[Function]}
      formFields={
        Array [
          <SingleField
            component="text-field"
            inputAddon={
              Object {
                "after": Object {
                  "fields": Array [
                    Object {
                      "component": "button",
                      "label": "Set 3",
                      "name": "set3",
                    },
                  ],
                },
              }
            }
            label="Text Box With Input Addon"
            name="text_box_21"
            title="Text Box With Input Addon"
          />,
        ]
      }
      schema={
        Object {
          "fields": Array [
            Object {
              "component": "text-field",
              "inputAddon": Object {
                "after": Object {
                  "fields": Array [
                    Object {
                      "component": "button",
                      "label": "Set 3",
                      "name": "set3",
                    },
                  ],
                },
              },
              "label": "Text Box With Input Addon",
              "name": "text_box_21",
              "title": "Text Box With Input Addon",
            },
          ],
        }
      }
      value={
        Object {
          "actionMapper": undefined,
          "componentMapper": Object {
            "button": [Function],
            "checkbox": [Function],
            "date-picker": [Function],
            "input-addon-button-group": [Function],
            "input-addon-group": [Function],
            "plain-text": [Function],
            "radio": [Function],
            "select": [Function],
            "sub-form": [Function],
            "switch": [Function],
            "tabs": [Function],
            "text-field": [Function],
            "textarea": [Function],
            "time-picker": [Function],
            "wizard": [Function],
          },
          "formOptions": Object {
            "batch": [Function],
            "blur": [Function],
            "change": [Function],
            "clearOnUnmount": false,
            "clearedValue": undefined,
            "concat": [Function],
            "destroyOnUnregister": false,
            "focus": [Function],
            "getFieldState": [Function],
            "getRegisteredFields": [Function],
            "getState": [Function],
            "handleSubmit": [Function],
            "initialize": [Function],
            "insert": [Function],
            "isValidationPaused": [Function],
            "move": [Function],
            "onCancel": [Function],
            "onReset": undefined,
            "onSubmit": [MockFunction],
            "pauseValidation": [Function],
            "pop": [Function],
            "pristine": true,
            "push": [Function],
            "registerField": [Function],
            "remove": [Function],
            "removeBatch": [Function],
            "renderForm": [Function],
            "reset": [Function],
            "resetFieldState": [Function],
            "resumeValidation": [Function],
            "setConfig": [Function],
            "shift": [Function],
            "submit": [Function],
            "subscribe": [Function],
            "swap": [Function],
            "unshift": [Function],
            "update": [Function],
            "valid": true,
          },
          "validatorMapper": Object {
            "exact-length-validator": [Function],
            "max-length-validator": [Function],
            "max-number-value": [Function],
            "min-items-validator": [Function],
            "min-length-validator": [Function],
            "min-number-value": [Function],
            "pattern-validator": [Function],
            "required-validator": [Function],
            "url-validator": [Function],
          },
        }
      }
    >
      <Component
        formFields={
          Array [
            <SingleField
              component="text-field"
              inputAddon={
                Object {
                  "after": Object {
                    "fields": Array [
                      Object {
                        "component": "button",
                        "label": "Set 3",
                        "name": "set3",
                      },
                    ],
                  },
                }
              }
              label="Text Box With Input Addon"
              name="text_box_21"
              title="Text Box With Input Addon"
            />,
          ]
        }
        schema={
          Object {
            "fields": Array [
              Object {
                "component": "text-field",
                "inputAddon": Object {
                  "after": Object {
                    "fields": Array [
                      Object {
                        "component": "button",
                        "label": "Set 3",
                        "name": "set3",
                      },
                    ],
                  },
                },
                "label": "Text Box With Input Addon",
                "name": "text_box_21",
                "title": "Text Box With Input Addon",
              },
            ],
          }
        }
      >
        <div>
          FormRenderer is missing 'FormTemplate' prop: ({formFields, schema}) =&gt; &lt;FormTemplate {...} /&gt;
        </div>
      </Component>
    </FormContent>
  </ReactFinalForm>
</FormRenderer>
`;

exports[`<Input Addon> should render single button before input addon correctly 1`] = `
<FormRenderer
  clearOnUnmount={false}
  componentMapper={
    Object {
      "button": [Function],
      "checkbox": [Function],
      "date-picker": [Function],
      "input-addon-button-group": [Function],
      "input-addon-group": [Function],
      "plain-text": [Function],
      "radio": [Function],
      "select": [Function],
      "sub-form": [Function],
      "switch": [Function],
      "tabs": [Function],
      "text-field": [Function],
      "textarea": [Function],
      "time-picker": [Function],
      "wizard": [Function],
    }
  }
  initialValues={Object {}}
  onCancel={[Function]}
  onSubmit={[MockFunction]}
  schema={
    Object {
      "fields": Array [
        Object {
          "component": "text-field",
          "inputAddon": Object {
            "before": Object {
              "fields": Array [
                Object {
                  "component": "input-addon-button-group",
                  "fields": Array [
                    Object {
                      "component": "button",
                      "label": "Set 2",
                      "name": "set2",
                    },
                  ],
                  "name": "i-a-g-2",
                },
              ],
            },
          },
          "label": "Text Box With Input Addon",
          "name": "text_box_21",
          "title": "Text Box With Input Addon",
        },
      ],
    }
  }
  showFormControls={false}
>
  <ReactFinalForm
    decorators={
      Array [
        [Function],
      ]
    }
    initialValues={Object {}}
    mutators={
      Object {
        "concat": [Function],
        "insert": [Function],
        "move": [Function],
        "pop": [Function],
        "push": [Function],
        "remove": [Function],
        "removeBatch": [Function],
        "shift": [Function],
        "swap": [Function],
        "unshift": [Function],
        "update": [Function],
      }
    }
    onSubmit={[MockFunction]}
    render={[Function]}
    subscription={
      Object {
        "pristine": true,
        "submitting": true,
        "valid": true,
      }
    }
  >
    <FormContent
      Template={[Function]}
      formFields={
        Array [
          <SingleField
            component="text-field"
            inputAddon={
              Object {
                "before": Object {
                  "fields": Array [
                    Object {
                      "component": "input-addon-button-group",
                      "fields": Array [
                        Object {
                          "component": "button",
                          "label": "Set 2",
                          "name": "set2",
                        },
                      ],
                      "name": "i-a-g-2",
                    },
                  ],
                },
              }
            }
            label="Text Box With Input Addon"
            name="text_box_21"
            title="Text Box With Input Addon"
          />,
        ]
      }
      schema={
        Object {
          "fields": Array [
            Object {
              "component": "text-field",
              "inputAddon": Object {
                "before": Object {
                  "fields": Array [
                    Object {
                      "component": "input-addon-button-group",
                      "fields": Array [
                        Object {
                          "component": "button",
                          "label": "Set 2",
                          "name": "set2",
                        },
                      ],
                      "name": "i-a-g-2",
                    },
                  ],
                },
              },
              "label": "Text Box With Input Addon",
              "name": "text_box_21",
              "title": "Text Box With Input Addon",
            },
          ],
        }
      }
      value={
        Object {
          "actionMapper": undefined,
          "componentMapper": Object {
            "button": [Function],
            "checkbox": [Function],
            "date-picker": [Function],
            "input-addon-button-group": [Function],
            "input-addon-group": [Function],
            "plain-text": [Function],
            "radio": [Function],
            "select": [Function],
            "sub-form": [Function],
            "switch": [Function],
            "tabs": [Function],
            "text-field": [Function],
            "textarea": [Function],
            "time-picker": [Function],
            "wizard": [Function],
          },
          "formOptions": Object {
            "batch": [Function],
            "blur": [Function],
            "change": [Function],
            "clearOnUnmount": false,
            "clearedValue": undefined,
            "concat": [Function],
            "destroyOnUnregister": false,
            "focus": [Function],
            "getFieldState": [Function],
            "getRegisteredFields": [Function],
            "getState": [Function],
            "handleSubmit": [Function],
            "initialize": [Function],
            "insert": [Function],
            "isValidationPaused": [Function],
            "move": [Function],
            "onCancel": [Function],
            "onReset": undefined,
            "onSubmit": [MockFunction],
            "pauseValidation": [Function],
            "pop": [Function],
            "pristine": true,
            "push": [Function],
            "registerField": [Function],
            "remove": [Function],
            "removeBatch": [Function],
            "renderForm": [Function],
            "reset": [Function],
            "resetFieldState": [Function],
            "resumeValidation": [Function],
            "setConfig": [Function],
            "shift": [Function],
            "submit": [Function],
            "subscribe": [Function],
            "swap": [Function],
            "unshift": [Function],
            "update": [Function],
            "valid": true,
          },
          "validatorMapper": Object {
            "exact-length-validator": [Function],
            "max-length-validator": [Function],
            "max-number-value": [Function],
            "min-items-validator": [Function],
            "min-length-validator": [Function],
            "min-number-value": [Function],
            "pattern-validator": [Function],
            "required-validator": [Function],
            "url-validator": [Function],
          },
        }
      }
    >
      <Component
        formFields={
          Array [
            <SingleField
              component="text-field"
              inputAddon={
                Object {
                  "before": Object {
                    "fields": Array [
                      Object {
                        "component": "input-addon-button-group",
                        "fields": Array [
                          Object {
                            "component": "button",
                            "label": "Set 2",
                            "name": "set2",
                          },
                        ],
                        "name": "i-a-g-2",
                      },
                    ],
                  },
                }
              }
              label="Text Box With Input Addon"
              name="text_box_21"
              title="Text Box With Input Addon"
            />,
          ]
        }
        schema={
          Object {
            "fields": Array [
              Object {
                "component": "text-field",
                "inputAddon": Object {
                  "before": Object {
                    "fields": Array [
                      Object {
                        "component": "input-addon-button-group",
                        "fields": Array [
                          Object {
                            "component": "button",
                            "label": "Set 2",
                            "name": "set2",
                          },
                        ],
                        "name": "i-a-g-2",
                      },
                    ],
                  },
                },
                "label": "Text Box With Input Addon",
                "name": "text_box_21",
                "title": "Text Box With Input Addon",
              },
            ],
          }
        }
      >
        <div>
          FormRenderer is missing 'FormTemplate' prop: ({formFields, schema}) =&gt; &lt;FormTemplate {...} /&gt;
        </div>
      </Component>
    </FormContent>
  </ReactFinalForm>
</FormRenderer>
`;

exports[`<Input Addon> should render the ultimate input addon correctly 1`] = `
<FormRenderer
  clearOnUnmount={false}
  componentMapper={
    Object {
      "button": [Function],
      "checkbox": [Function],
      "date-picker": [Function],
      "input-addon-button-group": [Function],
      "input-addon-group": [Function],
      "plain-text": [Function],
      "radio": [Function],
      "select": [Function],
      "sub-form": [Function],
      "switch": [Function],
      "tabs": [Function],
      "text-field": [Function],
      "textarea": [Function],
      "time-picker": [Function],
      "wizard": [Function],
    }
  }
  initialValues={Object {}}
  onCancel={[Function]}
  onSubmit={[MockFunction]}
  schema={
    Object {
      "fields": Array [
        Object {
          "component": "text-field",
          "inputAddon": Object {
            "after": Object {
              "fields": Array [
                Object {
                  "component": "input-addon-group",
                  "fields": Array [
                    Object {
                      "component": "plain-text",
                      "label": "-",
                      "name": "name1",
                      "variant": "span",
                    },
                  ],
                  "name": "i-a-g-2",
                },
                Object {
                  "component": "input-addon-button-group",
                  "fields": Array [
                    Object {
                      "component": "button",
                      "label": "Set 3",
                      "name": "set3",
                    },
                  ],
                  "name": "i-a-g-3",
                },
              ],
            },
            "before": Object {
              "fields": Array [
                Object {
                  "component": "input-addon-button-group",
                  "fields": Array [
                    Object {
                      "component": "button",
                      "label": "Set 1",
                      "name": "set1",
                      "onClick": [Function],
                    },
                    Object {
                      "component": "button",
                      "label": "Set 2",
                      "name": "set2",
                    },
                  ],
                  "name": "i-a-g-2",
                },
              ],
            },
          },
          "label": "Text Box With Input Addon",
          "name": "text_box_21",
          "title": "Text Box With Input Addon",
        },
      ],
    }
  }
  showFormControls={false}
>
  <ReactFinalForm
    decorators={
      Array [
        [Function],
      ]
    }
    initialValues={Object {}}
    mutators={
      Object {
        "concat": [Function],
        "insert": [Function],
        "move": [Function],
        "pop": [Function],
        "push": [Function],
        "remove": [Function],
        "removeBatch": [Function],
        "shift": [Function],
        "swap": [Function],
        "unshift": [Function],
        "update": [Function],
      }
    }
    onSubmit={[MockFunction]}
    render={[Function]}
    subscription={
      Object {
        "pristine": true,
        "submitting": true,
        "valid": true,
      }
    }
  >
    <FormContent
      Template={[Function]}
      formFields={
        Array [
          <SingleField
            component="text-field"
            inputAddon={
              Object {
                "after": Object {
                  "fields": Array [
                    Object {
                      "component": "input-addon-group",
                      "fields": Array [
                        Object {
                          "component": "plain-text",
                          "label": "-",
                          "name": "name1",
                          "variant": "span",
                        },
                      ],
                      "name": "i-a-g-2",
                    },
                    Object {
                      "component": "input-addon-button-group",
                      "fields": Array [
                        Object {
                          "component": "button",
                          "label": "Set 3",
                          "name": "set3",
                        },
                      ],
                      "name": "i-a-g-3",
                    },
                  ],
                },
                "before": Object {
                  "fields": Array [
                    Object {
                      "component": "input-addon-button-group",
                      "fields": Array [
                        Object {
                          "component": "button",
                          "label": "Set 1",
                          "name": "set1",
                          "onClick": [Function],
                        },
                        Object {
                          "component": "button",
                          "label": "Set 2",
                          "name": "set2",
                        },
                      ],
                      "name": "i-a-g-2",
                    },
                  ],
                },
              }
            }
            label="Text Box With Input Addon"
            name="text_box_21"
            title="Text Box With Input Addon"
          />,
        ]
      }
      schema={
        Object {
          "fields": Array [
            Object {
              "component": "text-field",
              "inputAddon": Object {
                "after": Object {
                  "fields": Array [
                    Object {
                      "component": "input-addon-group",
                      "fields": Array [
                        Object {
                          "component": "plain-text",
                          "label": "-",
                          "name": "name1",
                          "variant": "span",
                        },
                      ],
                      "name": "i-a-g-2",
                    },
                    Object {
                      "component": "input-addon-button-group",
                      "fields": Array [
                        Object {
                          "component": "button",
                          "label": "Set 3",
                          "name": "set3",
                        },
                      ],
                      "name": "i-a-g-3",
                    },
                  ],
                },
                "before": Object {
                  "fields": Array [
                    Object {
                      "component": "input-addon-button-group",
                      "fields": Array [
                        Object {
                          "component": "button",
                          "label": "Set 1",
                          "name": "set1",
                          "onClick": [Function],
                        },
                        Object {
                          "component": "button",
                          "label": "Set 2",
                          "name": "set2",
                        },
                      ],
                      "name": "i-a-g-2",
                    },
                  ],
                },
              },
              "label": "Text Box With Input Addon",
              "name": "text_box_21",
              "title": "Text Box With Input Addon",
            },
          ],
        }
      }
      value={
        Object {
          "actionMapper": undefined,
          "componentMapper": Object {
            "button": [Function],
            "checkbox": [Function],
            "date-picker": [Function],
            "input-addon-button-group": [Function],
            "input-addon-group": [Function],
            "plain-text": [Function],
            "radio": [Function],
            "select": [Function],
            "sub-form": [Function],
            "switch": [Function],
            "tabs": [Function],
            "text-field": [Function],
            "textarea": [Function],
            "time-picker": [Function],
            "wizard": [Function],
          },
          "formOptions": Object {
            "batch": [Function],
            "blur": [Function],
            "change": [Function],
            "clearOnUnmount": false,
            "clearedValue": undefined,
            "concat": [Function],
            "destroyOnUnregister": false,
            "focus": [Function],
            "getFieldState": [Function],
            "getRegisteredFields": [Function],
            "getState": [Function],
            "handleSubmit": [Function],
            "initialize": [Function],
            "insert": [Function],
            "isValidationPaused": [Function],
            "move": [Function],
            "onCancel": [Function],
            "onReset": undefined,
            "onSubmit": [MockFunction],
            "pauseValidation": [Function],
            "pop": [Function],
            "pristine": true,
            "push": [Function],
            "registerField": [Function],
            "remove": [Function],
            "removeBatch": [Function],
            "renderForm": [Function],
            "reset": [Function],
            "resetFieldState": [Function],
            "resumeValidation": [Function],
            "setConfig": [Function],
            "shift": [Function],
            "submit": [Function],
            "subscribe": [Function],
            "swap": [Function],
            "unshift": [Function],
            "update": [Function],
            "valid": true,
          },
          "validatorMapper": Object {
            "exact-length-validator": [Function],
            "max-length-validator": [Function],
            "max-number-value": [Function],
            "min-items-validator": [Function],
            "min-length-validator": [Function],
            "min-number-value": [Function],
            "pattern-validator": [Function],
            "required-validator": [Function],
            "url-validator": [Function],
          },
        }
      }
    >
      <Component
        formFields={
          Array [
            <SingleField
              component="text-field"
              inputAddon={
                Object {
                  "after": Object {
                    "fields": Array [
                      Object {
                        "component": "input-addon-group",
                        "fields": Array [
                          Object {
                            "component": "plain-text",
                            "label": "-",
                            "name": "name1",
                            "variant": "span",
                          },
                        ],
                        "name": "i-a-g-2",
                      },
                      Object {
                        "component": "input-addon-button-group",
                        "fields": Array [
                          Object {
                            "component": "button",
                            "label": "Set 3",
                            "name": "set3",
                          },
                        ],
                        "name": "i-a-g-3",
                      },
                    ],
                  },
                  "before": Object {
                    "fields": Array [
                      Object {
                        "component": "input-addon-button-group",
                        "fields": Array [
                          Object {
                            "component": "button",
                            "label": "Set 1",
                            "name": "set1",
                            "onClick": [Function],
                          },
                          Object {
                            "component": "button",
                            "label": "Set 2",
                            "name": "set2",
                          },
                        ],
                        "name": "i-a-g-2",
                      },
                    ],
                  },
                }
              }
              label="Text Box With Input Addon"
              name="text_box_21"
              title="Text Box With Input Addon"
            />,
          ]
        }
        schema={
          Object {
            "fields": Array [
              Object {
                "component": "text-field",
                "inputAddon": Object {
                  "after": Object {
                    "fields": Array [
                      Object {
                        "component": "input-addon-group",
                        "fields": Array [
                          Object {
                            "component": "plain-text",
                            "label": "-",
                            "name": "name1",
                            "variant": "span",
                          },
                        ],
                        "name": "i-a-g-2",
                      },
                      Object {
                        "component": "input-addon-button-group",
                        "fields": Array [
                          Object {
                            "component": "button",
                            "label": "Set 3",
                            "name": "set3",
                          },
                        ],
                        "name": "i-a-g-3",
                      },
                    ],
                  },
                  "before": Object {
                    "fields": Array [
                      Object {
                        "component": "input-addon-button-group",
                        "fields": Array [
                          Object {
                            "component": "button",
                            "label": "Set 1",
                            "name": "set1",
                            "onClick": [Function],
                          },
                          Object {
                            "component": "button",
                            "label": "Set 2",
                            "name": "set2",
                          },
                        ],
                        "name": "i-a-g-2",
                      },
                    ],
                  },
                },
                "label": "Text Box With Input Addon",
                "name": "text_box_21",
                "title": "Text Box With Input Addon",
              },
            ],
          }
        }
      >
        <div>
          FormRenderer is missing 'FormTemplate' prop: ({formFields, schema}) =&gt; &lt;FormTemplate {...} /&gt;
        </div>
      </Component>
    </FormContent>
  </ReactFinalForm>
</FormRenderer>
`;
